// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Компоненты/Типография/Title Компонент 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        UI Компоненты
      </li>
      <li
        className="breadcrumb-item active"
      >
        Типография
      </li>
      <li
        className="breadcrumb-item active"
      >
        Title
      </li>
      <li
        className="breadcrumb-item active"
      >
        Компонент
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "ui-компоненты-типография-title--компонент",
                        "kind": "UI Компоненты/Типография/Title",
                        "name": "Компонент",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\components\\\\snippets\\\\Typography\\\\Title\\\\Title.story.js",
                          "framework": "react",
                          "info": Object {
                            "text": "
      Компонент 'Заголовок'
      ~~~js
      import Title from 'n2o/lib/components/snippets/Typography/Title/Title';
      
      <Title text=\\"Title\\" />
      ~~~
      ",
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Компонент",
                      }
                    }
                    excludedPropTypes={Array []}
                    info="
      Компонент 'Заголовок'
      ~~~js
      import Title from 'n2o/lib/components/snippets/Typography/Title/Title';
      
      <Title text=\\"Title\\" />
      ~~~
      "
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={Array []}
                    propTablesExclude={Array []}
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <Title
                      code={false}
                      color=""
                      copyable={false}
                      del={false}
                      editable={false}
                      level={1}
                      mark={false}
                      small={false}
                      strong={false}
                      text="Title"
                      underline={false}
                    />
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;

exports[`Storyshots UI Компоненты/Типография/Title Разное отображение 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        UI Компоненты
      </li>
      <li
        className="breadcrumb-item active"
      >
        Типография
      </li>
      <li
        className="breadcrumb-item active"
      >
        Title
      </li>
      <li
        className="breadcrumb-item active"
      >
        Разное отображение
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "ui-компоненты-типография-title--разное-отображение",
                        "kind": "UI Компоненты/Типография/Title",
                        "name": "Разное отображение",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\components\\\\snippets\\\\Typography\\\\Title\\\\Title.story.js",
                          "framework": "react",
                          "info": Object {
                            "text": "
      Компонент 'Заголовок'
      ~~~js
      import Title from 'n2o/lib/components/snippets/Typography/Title/Title';
      
      <Fragment>
        <h1>Level:</h1>
        <code>{\`{level:1,2,3,4,5}\`}</code>
        <Title text={meta.text} level={1} />
        <Title text={meta.text} level={2} />
        <Title text={meta.text} level={3} />
        <Title text={meta.text} level={4} />
        <Title text={meta.text} level={5} />
        <br />
        <h1>Transform:</h1>
        <code>{\`{code:true}\`}</code>
        <Title text={meta.text} level={3} code={true} />
        <code>{\`{del:true}\`}</code>
        <Title text={meta.text} level={3} del={true} />
        <code>{\`{mark:true}\`}</code>
        <Title text={meta.text} level={3} mark={true} />
        <code>{\`{strong:true}\`}</code>
        <Title text={meta.text} level={3} strong={true} />
        <code>{\`{underline:true}\`}</code>
        <Title text={meta.text} level={3} underline={true} />
        <code>{\`{small:true}\`}</code>
        <Title text={meta.text} level={3} small={true} />
        <br />
        <h1>Colors:</h1>
        {map(allColors, color => (
          <Title color={color} level={2} text={meta.text} />
        ))}
      </Fragment>
      ~~~
      ",
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Разное отображение",
                      }
                    }
                    excludedPropTypes={Array []}
                    info="
      Компонент 'Заголовок'
      ~~~js
      import Title from 'n2o/lib/components/snippets/Typography/Title/Title';
      
      <Fragment>
        <h1>Level:</h1>
        <code>{\`{level:1,2,3,4,5}\`}</code>
        <Title text={meta.text} level={1} />
        <Title text={meta.text} level={2} />
        <Title text={meta.text} level={3} />
        <Title text={meta.text} level={4} />
        <Title text={meta.text} level={5} />
        <br />
        <h1>Transform:</h1>
        <code>{\`{code:true}\`}</code>
        <Title text={meta.text} level={3} code={true} />
        <code>{\`{del:true}\`}</code>
        <Title text={meta.text} level={3} del={true} />
        <code>{\`{mark:true}\`}</code>
        <Title text={meta.text} level={3} mark={true} />
        <code>{\`{strong:true}\`}</code>
        <Title text={meta.text} level={3} strong={true} />
        <code>{\`{underline:true}\`}</code>
        <Title text={meta.text} level={3} underline={true} />
        <code>{\`{small:true}\`}</code>
        <Title text={meta.text} level={3} small={true} />
        <br />
        <h1>Colors:</h1>
        {map(allColors, color => (
          <Title color={color} level={2} text={meta.text} />
        ))}
      </Fragment>
      ~~~
      "
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={Array []}
                    propTablesExclude={Array []}
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <h1>
                      Level:
                    </h1>
                    <code>
                      {level:1,2,3,4,5}
                    </code>
                    <Title
                      level={1}
                      text="Title"
                    />
                    <Title
                      level={2}
                      text="Title"
                    />
                    <Title
                      level={3}
                      text="Title"
                    />
                    <Title
                      level={4}
                      text="Title"
                    />
                    <Title
                      level={5}
                      text="Title"
                    />
                    <br />
                    <h1>
                      Transform:
                    </h1>
                    <code>
                      {code:true}
                    </code>
                    <Title
                      code={true}
                      level={3}
                      text="Title"
                    />
                    <code>
                      {del:true}
                    </code>
                    <Title
                      del={true}
                      level={3}
                      text="Title"
                    />
                    <code>
                      {mark:true}
                    </code>
                    <Title
                      level={3}
                      mark={true}
                      text="Title"
                    />
                    <code>
                      {strong:true}
                    </code>
                    <Title
                      level={3}
                      strong={true}
                      text="Title"
                    />
                    <code>
                      {underline:true}
                    </code>
                    <Title
                      level={3}
                      text="Title"
                      underline={true}
                    />
                    <code>
                      {small:true}
                    </code>
                    <Title
                      level={3}
                      small={true}
                      text="Title"
                    />
                    <br />
                    <h1>
                      Colors:
                    </h1>
                    <Title
                      color="primary"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="secondary"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="success"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="danger"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="warning"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="info"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="light"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="dark"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="muted"
                      level={2}
                      text="Title"
                    />
                    <Title
                      color="white"
                      level={2}
                      text="Title"
                    />
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;
